refactored: extracted method for crawling threads creation